<resources>
    <string name="app_name">BikePhone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="registar">Registar</string>
    <string name="verificar">Verificar</string>
    <string name="init">Iniciar</string>
    <string name="start_button">Iniciar</string>
    <string name="pause_button">Pausar</string>
    <string name="stop_button">Parar</string>
    <string name="resume_button">Resumir</string>
    <string name="duration">Duração:</string>
    <string name="settings">Defenições</string>
    <string name="ride_id">Nome: </string>
    <string name="distance">Distância: </string>
    <string name="ride_samplerate">Freq. Medição: </string>
    <string name="date">Data: </string>
    <string name="title_activity_race_info_activity">RaceInfoActivity</string>
    <string name="distanceunits">m</string>
    <string name="title_activity_configs">ConfigsActivity</string>
    <string name="config_mac">Mac:</string>
    <string name="username">Utilizador:</string>
    <string name="config_samplefreq">Precisão:</string>
    <string name="confirm">Confirmar</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="longpress">Long press to pause</string>
    <string name="pause">Corrida Pausada</string>
    <string name="resume">Corrida Iniciada</string>
    <string name="stop">Corrida Finalizada</string>
    <string name="start">Corrida Iniciada</string>
    <string name="title_location_permission">Permissões</string>
    <string name="text_location_permission">Ativar Localização</string>
    <string name="ok">Ok</string>


    <string-array name="freq_precision">
        <item>Baixa  (5 Hz)</item>
        <item>Normal  (10 Hz)</item>
        <item>Alta  (20 Hz)</item>
        <item>Muito Alta  (40 Hz)</item>
    </string-array>

</resources>
